refactor : swagger code
